Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-19503

quota soft limit is not working

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Major Major
    • Lustre 2.18.0
    • None
    • None
    • 2
    • 9223372036854775807

      From the document "The grace period applies to all users. The user block soft limit is for all users who are using a blocks quota.
      Soft limit – The grace timer is started once the soft limit is exceeded. At this point, the user/group/project
      can still allocate block/inode. When the grace time expires and if the user is still above the soft limit, the
      soft limit becomes a hard limit and the user/group/project can't allocate any new block/inode any more.
      The user/group/project should then delete files to be under the soft limit. The soft limit MUST be smaller
      than the hard limit. If the soft limit is not needed, it should be set to zero (0).
      Hard limit – Block or inode allocation will fail with EDQUOT(i.e. quota exceeded) when the hard limit
      is reached. The hard limit is the absolute limit. When a grace period is set, one can exceed the soft limit
      within the grace period if under the hard limit.
      "

      below test can easily re-create the issue

            rajeevm Rajeev Mishra
            rajeevm Rajeev Mishra
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: